# git-practice

./: Main.py  README.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  implementation-ticket.md  implementation.md
.github/workflows/: publish-release.yml  release-candidate.yml  semgrep.yml
